--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -38,10 +38,15 @@
 <div class="col-md-4"> 
 <h2>Blockchain</h2>
 <div ng-repeat="block in blockChain" class="block">
-<div>Last Hash: {{block.lastBlock}}</div>
-<div>Image Hash: {{block.hash}}</div>
-<div>TimeStamp: {{block.timestamp}}</div>
-<div>Nonce: {{block.nonce}}</div>
+<div>Block Hash: </div><div>{{block.blockHash}}</div>
+<div></div>
+<div>Last Block Hash: {{block.lastBlock}}</div>
+<div></div>
+<div>Image Hash: </div><div>{{block.hash}}</div>
+<div></div>
+<div>TimeStamp: </div><div>{{block.timestamp}}</div>
+<div></div>
+<div>Nonce: </div><div>{{block.nonce}}</div>
 
 </div>
 </div>
